deployments/workloads/media/prowlarr/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "prowlarr"
spec:
  endpointSelector:
    matchLabels:
      app: prowlarr
  egress:
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
  ingress:
    - toPorts:
        - ports:
            - port: "9696"
              protocol: TCP
